gcc/testsuite/g++.dg/spellcheck-pr116771.C
class layout_printer
{
    void print_newline ();
};

void
layout_pirnter::print_newline () // { dg-error "'layout_pirnter' has not been declared; did you mean 'layout_printer'" }
{
}
